--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:       Type
+title:       过往拾忆
 email:       ''
-description: ''
+description: '当站在当前节点时，回头望去都是过往。'
 baseurl:     '' # The subpath of your site, e.g. /blog
 url:         'https://type-jekyll.aspirethemes.com/' # The base hostname & protocol for your site
 twitter:     ''
