--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
-  repo: aspirethemes/type # Path to your Github repository
-  branch: master # Branch to update (master by default)
+  repo: SWHL/SWHL.github.io # Path to your Github repository
+  branch: main # Branch to update (master by default)
 
 media_folder: "images" # Folder where user uploaded files should go
 
