--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:       过往拾忆![](https://visitor-badge.glitch.me/badge?page_id=SWHL.github.io
-.videos)
+title:       过往拾忆
 description: '当站在当前节点时，回头望去都是过往。'
 baseurl:     '' # The subpath of your site, e.g. /blog
 url:         '' # The base hostname & protocol for your site
