feat: update config

--- a/zensical.toml
+++ b/zensical.toml
@@ -32,36 +32,168 @@ extra_css = [
 # ===== 导航配置 [Navigation] =====
 nav = [
     { "主页" = "index.md" },
-    # { "读过的书" = [
-    #     { "5 分钟快速开始" = "getting-started/quick-start.md" },
-    #     { "从 MkDocs 迁移" = "getting-started/migration.md" },
-    # ] },
-    # { "核心教程" = [
-    #     { "zensical.toml 配置详解" = "tutorials/configuration.md" },
-    #     { "主题定制指南" = "tutorials/theme-customization.md" },
-    #     { "Markdown 扩展使用" = "tutorials/markdown-extensions.md" },
-    #     { "Zensical 博客系统完全指南" = "tutorials/blog-tutorial.md" },
-    # ] },
-    # { "插件系统" = [
-    #     { "博客插件详解" = "blog/plugins/blog.md" },
-    #     { "搜索插件配置" = "blog/plugins/search.md" },
-    #     { "标签插件使用" = "blog/plugins/tags.md" },
-    #     { "RSS 插件配置" = "blog/plugins/rss.md" },
-    # ] },
-    # { "部署指南" = [
-    #     { "GitHub Pages 部署（推荐）" = "blog/deployment/github-pages.md" },
-    #     { "Netlify 部署" = "blog/deployment/netlify.md" },
-    #     { "GitLab Pages 部署" = "blog/deployment/gitlab-pages.md" },
-    #     { "自托管部署" = "blog/deployment/self-hosted.md" },
-    # ] },
-    # { "高级主题" = [
-    #     { "性能优化" = "blog/advanced/performance.md" },
-    #     { "SEO 优化" = "blog/advanced/seo.md" },
-    #     { "多语言支持" = "blog/advanced/i18n.md" },
-    #     { "自定义 404 页面" = "blog/advanced/custom-404.md" },
-    #     { "自定义字体" = "blog/advanced/custom-fonts.md" },
-    #     { "添加评论系统" = "blog/advanced/comment-system.md" },
-    # ] },
     { "读过的书" = "books.md" },
     { "看过的电影" = "videos.md" },
 ]
+
+# ==========================================
+# 主题配置 [Theme]
+# ==========================================
+[project.theme]
+variant = "modern"                # Zensical 特有：使用 modern 主题变体（或 "classic"）
+custom_dir = "docs/overrides"     # 自定义主题目录（相对于配置文件）
+logo = "https://zensical.org/assets/zensical.svg"  # 网站 Logo
+favicon = "https://zensical.org/assets/zensical.svg"          # 网站图标
+language = "zh"                   # 网站语言：中文
+
+# ===== 主题特性 =====
+features = [
+    # 导航相关
+    "announce.dismiss",           # 可关闭公告栏
+    "navigation.prune",           # 只渲染可见导航项
+    "navigation.tracking",        # 滚动时URL锚点自动更新
+    "navigation.tabs",            # 一级导航显示为顶部Tab
+    "navigation.sections",        # 侧边栏分组
+    "navigation.top",             # 返回顶部按钮
+    "navigation.footer",          # 上一页/下一页导航
+    "navigation.expand",          # 默认展开导航
+    "navigation.indexes",         # 章节索引页
+    "navigation.instant",      # 即时导航
+    "navigation.instant.prefetch",  # 预加载
+
+    # 搜索相关
+    "search.suggest",             # 搜索建议
+    "search.highlight",           # 搜索结果高亮
+    "search.share",               # 搜索结果分享
+
+    # 目录相关
+    "toc.follow",                 # 目录跟随滚动
+
+    # 内容相关
+    "content.tooltips",           # 内容提示框
+    "content.code.copy",          # 代码复制按钮
+    "content.code.select",        # 代码选择功能
+    "content.code.annotate",      # 代码注释功能
+]
+
+# ===== 调色板配置 =====
+# 自动模式（跟随系统）
+[[project.theme.palette]]
+media = "(prefers-color-scheme)"
+toggle = { icon = "material/link", name = "关闭自动模式" }
+
+# 日间模式
+[[project.theme.palette]]
+media = "(prefers-color-scheme: light)"
+scheme = "default"                # 日间模式配色
+primary = "indigo"                # 主色调
+accent = "indigo"                 # 强调色
+toggle = { icon = "material/toggle-switch", name = "切换至夜间模式" }
+
+# 夜间模式
+[[project.theme.palette]]
+media = "(prefers-color-scheme: dark)"
+scheme = "slate"                  # 夜间模式配色
+primary = "indigo"                # 主色调
+accent = "indigo"                 # 强调色
+toggle = { icon = "material/toggle-switch-off-outline", name = "切换至日间模式" }
+
+# ===== 图标配置 =====
+[project.theme.icon]
+repo = "fontawesome/brands/github"          # 仓库图标
+previous = "fontawesome/solid/angle-left"   # 上一页图标
+next = "fontawesome/solid/angle-right"      # 下一页图标
+alternate = "fontawesome/solid/language"    # 语言切换图标
+
+
+# ==========================================
+# 额外配置 [Extra]
+# ==========================================
+[project.extra]
+generator = true
+
+# ===== 状态标签 =====
+[project.extra.status]
+new = "最近添加"
+deprecated = "已弃用"
+
+# ===== 多语言切换配置 =====
+# 可选：如果需要多语言翻译功能，取消注释以下配置
+# 需要配合 JavaScript 翻译脚本使用
+# [[project.extra.alternate]]
+# name = "中文"
+# link = "javascript:translateTo('chinese_simplified');"
+# lang = "zh"
+#
+# [[project.extra.alternate]]
+# name = "English"
+# link = "javascript:translateTo('english');"
+# lang = "en"
+
+# ===== 社交媒体链接 =====
+# 显示在页脚的社交媒体图标
+[[project.extra.social]]
+icon = "fontawesome/brands/github"
+link = "https://github.com/SWHL"
+name = "GitHub"
+
+
+[[project.extra.social]]
+icon = "fontawesome/regular/envelope"
+link = "mailto:liekkaskono@163.com"
+name = "Email"
+
+
+# ==========================================
+# 插件配置 [Plugins]
+# ==========================================
+
+# ===== 搜索插件 =====
+[project.plugins.search]
+separator = '[\s\u200b\-]'
+
+# ===== 博客插件 =====
+[project.plugins.blog]
+post_date_format = "full"                    # 时间格式：完整日期
+draft = true                                  # 启用草稿功能
+draft_if_future_date = true                   # 自动将具有未来日期的帖子标记为草稿
+post_readtime = true                          # 显示阅读时间
+post_readtime_words_per_minute = 265          # 每分钟阅读字数（中文适配）
+post_url_format = "{date}/{slug}"             # 文章URL格式
+pagination_per_page = 10                      # 每页显示文章数
+pagination_url_format = "page/{page}"         # 分页URL格式
+
+# ===== 标签插件 =====
+[project.plugins.tags]
+
+
+# ===== 官方默认配置（严格按照 Zensical 官方文档）=====
+[project.markdown_extensions.abbr]
+[project.markdown_extensions.admonition]
+[project.markdown_extensions.attr_list]
+[project.markdown_extensions.def_list]
+[project.markdown_extensions.footnotes]
+[project.markdown_extensions.md_in_html]
+[project.markdown_extensions.toc]
+toc_depth = 3
+permalink = true  # 固定标题位置为当前位置，显示 # 符号
+[project.markdown_extensions.pymdownx.arithmatex]
+generic = true
+[project.markdown_extensions.pymdownx.betterem]
+smart_enable = "false"
+[project.markdown_extensions.pymdownx.caret]
+[project.markdown_extensions.pymdownx.details]
+[project.markdown_extensions.pymdownx.emoji]
+emoji_generator = "zensical.extensions.emoji.to_svg"
+emoji_index = "zensical.extensions.emoji.twemoji"
+[project.markdown_extensions.pymdownx.highlight]
+[project.markdown_extensions.pymdownx.inlinehilite]
+[project.markdown_extensions.pymdownx.keys]
+[project.markdown_extensions.pymdownx.mark]
+[project.markdown_extensions.pymdownx.smartsymbols]
+[project.markdown_extensions.pymdownx.superfences]
+[project.markdown_extensions.pymdownx.tabbed]
+alternate_style = true
+[project.markdown_extensions.pymdownx.tasklist]
+custom_checkbox = true
+[project.markdown_extensions.pymdownx.tilde]
