feat: add books

--- a/zensical.toml
+++ b/zensical.toml
@@ -32,7 +32,17 @@ extra_css = [
 # ===== 导航配置 [Navigation] =====
 nav = [
     { "主页" = "index.md" },
-    { "读过的书" = "books.md" },
+    { "读过的书" = [
+        { "2026" = "books/2026.md" },
+        { "2025" = "books/2025.md" },
+        { "2024" = "books/2024.md" },
+        { "2023" = "books/2023.md" },
+        { "2022" = "books/2022.md" },
+        { "2021" = "books/2021.md" },
+        { "2020" = "books/2020.md" },
+        { "2019" = "books/2019.md" },
+        { "2018" = "books/2018.md" },
+    ] },
     { "看过的电影" = "videos.md" },
 ]
 
