--- a/zensical.toml
+++ b/zensical.toml
@@ -43,7 +43,16 @@ nav = [
         { "2019" = "books/2019.md" },
         { "2018" = "books/2018.md" },
     ] },
-    { "看过的电影" = "videos.md" },
+    { "看过的电影" = [
+        { "2026" = "videos/2026.md" },
+        { "2025" = "videos/2025.md" },
+        { "2024" = "videos/2024.md" },
+        { "2023" = "videos/2023.md" },
+        { "2022" = "videos/2022.md" },
+        { "2021" = "videos/2021.md" },
+        { "2020" = "videos/2020.md" },
+        { "之前" = "videos/之前.md" },
+    ]}
 ]
 
 # ==========================================
