chore: update cfg

--- a/zensical.toml
+++ b/zensical.toml
@@ -31,9 +31,8 @@ extra_css = [
 
 # ===== 导航配置 [Navigation] =====
 nav = [
-    { "主页" = "index.md" },
+    # { "主页" = "index.md" },
     { "📚 读过的书" = [
-        { "引言" = "books/index.md" },
         { "2026" = "books/2026.md" },
         { "2025" = "books/2025.md" },
         { "2024" = "books/2024.md" },
@@ -45,7 +44,6 @@ nav = [
         { "2018" = "books/2018.md" },
     ] },
     { "🎬 看过的电影" = [
-        { "引言" = "videos/index.md" },
         { "2026" = "videos/2026.md" },
         { "2025" = "videos/2025.md" },
         { "2024" = "videos/2024.md" },
