chore: update files

--- a/zensical.toml
+++ b/zensical.toml
@@ -31,7 +31,7 @@ extra_css = [
 
 # ===== 导航配置 [Navigation] =====
 nav = [
-    # { "主页" = "index.md" },
+    { "主页" = "index.md" },
     { "📚 读过的书" = [
         { "2026" = "books/2026.md" },
         { "2025" = "books/2025.md" },
