--- a/zensical.toml
+++ b/zensical.toml
@@ -44,6 +44,7 @@ nav = [
         { "2018" = "books/2018.md" },
     ] },
     { "🎬 看过的电影" = [
+        {"写在前面" = "videos/index.md"},
         { "2026" = "videos/2026.md" },
         { "2025" = "videos/2025.md" },
         { "2024" = "videos/2024.md" },
@@ -52,6 +53,9 @@ nav = [
         { "2021" = "videos/2021.md" },
         { "2020" = "videos/2020.md" },
         { "之前" = "videos/之前.md" },
+    ]},
+    { "🥘 美食" = [
+        {"2026" = "eat/2026.md"}
     ]}
 ]
 
