--- a/zensical.toml
+++ b/zensical.toml
@@ -33,6 +33,7 @@ extra_css = [
 nav = [
     { "🏠 主页" = "index.md" },
     { "📚 读过的书" = [
+        {"写在前面" = "books/index.md"},
         { "2026" = "books/2026.md" },
         { "2025" = "books/2025.md" },
         { "2024" = "books/2024.md" },
@@ -55,7 +56,8 @@ nav = [
         { "之前" = "videos/之前.md" },
     ]},
     { "🥘 美食" = [
-        {"2026" = "eat/2026.md"}
+        {"写在前面" = "delicacy/index.md"},
+        {"2026" = "delicacy/2026.md"}
     ]}
 ]
 
