docs: add 下班后开始新的一天

--- a/zensical.toml
+++ b/zensical.toml
@@ -53,7 +53,7 @@ nav = [
         { "2022" = "videos/2022.md" },
         { "2021" = "videos/2021.md" },
         { "2020" = "videos/2020.md" },
-        { "之前" = "videos/之前.md" },
+        { "old" = "videos/之前.md" },
     ]},
     { "🥘 美食" = [
         {"写在前面" = "delicacy/index.md"},
