--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-zensical>=0.1.0
-pygments>=2.15.0
-pymdown-extensions>=10.0
+mkdocs
+mkdocs-material
+jieba
+mkdocs-git-revision-date-localized-plugin
+mkdocs-git-committers-plugin-2
+mkdocs-rss-plugin
