--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,6 +69,15 @@ theme:
       software-tag: fontawesome/solid/laptop-code
 
 plugins:
+  - rss:
+      match_path: "writing/**/*.md"
+      date_from_meta:
+        as_creation: date.created
+        as_update: "git"
+      created_feed_filename: feed_rss_created.xml
+      updated_feed_filename: feed_rss_updated.xml
+      length: 20
+      pretty_print: false
   - tags
   - blog:
       archive: false
