docs: update files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,7 +86,7 @@ plugins:
   - search:
       separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
   - git-committers:
-      repository: RapidAI/RapidLayout
+      repository: SWHL/SWHL.github.io
       branch: main
       token: !!python/object/apply:os.getenv ["MKDOCS_GIT_COMMITTERS_APIKEY"]
   - git-revision-date-localized:
