docs: update files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,7 @@ theme:
         name: 暗黑主题
 
   icon:
-    logo: fontawesome/solid-blog
+    logo: fontawesome/solid/blog
     previous: fontawesome/solid/angle-left
     next: fontawesome/solid/angle-right
     repo: fontawesome/brands/github
