--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,9 +4,7 @@ on:
     branches:
       - main
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: write
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -20,7 +18,7 @@ jobs:
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: 3.10
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       - uses: actions/cache@v4
         with:
