--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,7 +75,7 @@ plugins:
         as_creation: date.created
         as_update: "git"
       length: 20
-      pretty_print: false
+      pretty_print: true
   - tags
   - blog:
       archive: false
