docs: update files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ theme:
   name: material
   favicon: ./images/blog-solid-full.svg
   language: zh
-  custom_dir: docs/overrides
+  custom_dir: overrides
   features:
     - announce.dismiss
     - content.tooltips
@@ -96,8 +96,8 @@ plugins:
 
 
 hooks:
-  - docs/hooks/expiry.py
-  - docs/hooks/change_copyright.py
+  - hooks/expiry.py
+  - hooks/change_copyright.py
 
 extra_css:
   - stylesheets/extra.css
