--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -148,10 +148,9 @@ markdown_extensions:
 nav:
   - 首页: index.md
   - 写作(Writing):
+    - pathlib库中那些容易被忽略的好用方法: writing/pathlib.md
     - 我是如何构建自己的信息流闭环的？: writing/how_do_i_curate_infomation_flow.md
-    - 工具:
-      - Obsidian:
-        - 自用插件: writing/obsidian/plugins.md
+    - Obsidian自用插件: writing/obsidian/plugins.md
   - 项目 (Projects):
     - My RSS Tool: projects/my-rss-tool.md
   - 生活(Life):
